@@ -1,5 +1,6 @@
 CHANGES IN FLTK 1.3.0
 
+	- Fixed window levels in OS X Cocoa (STR #2316)
 	- Added jpeg support to Fluid image() element
 	- Added loading jpeg images from memory
 	- Added binary data type to Fluid
